--- a/style.css
+++ b/style.css
@@ -45,4 +45,44 @@ nav button#join{
     color: white;
     margin-right: 20px;
 
+
+}
+
+section#hero{
+    display: flex;
+    padding: 20px 5%;
+    background-color: #f4f6fc;
+}
+section#hero> div{
+    flex: 1;
+}
+nav #menu-btn {
+    border: none;
+    background-color:transparent;
+
+}
+
+section#hero .detail{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+section#hero> div img{
+    width: 100%;
+}
+section#hero .details h1 {
+    color: #1f2c46;
+    font-size: 2.5em;
+    font-weight: bold;
+}
+
+section#hero .detail button {
+    background-color: #3359df;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    padding: 15px 30px;
+    font-size: 18px;
+    margin: 20px 0px;
 }
